force-app/main/default/objects/Contact/fields/Autorisation_Envoi_SMS__c.field-meta.xml
<CustomField>
    <fullName>Autorisation_Envoi_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autorisation Envoi SMS</label>
    <type>Checkbox</type>
</CustomField>