force-app/main/default/objects/Contact/fields/Contact_operationnel__c.field-meta.xml
<CustomField>
    <fullName>Contact_operationnel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact opérationnel</label>
    <type>Checkbox</type>
</CustomField>