force-app/main/default/objects/Contact/fields/Date_de_formation__c.field-meta.xml
<CustomField>
    <fullName>Date_de_formation__c</fullName>
    <label>Date de formation</label>
    <type>Date</type>
</CustomField>