force-app/main/default/objects/Contact/fields/Est_ce_leader_d_opinion__c.field-meta.xml
<CustomField>
    <fullName>Est_ce_leader_d_opinion__c</fullName>
    <label>Est-ce un(e) leader d&#39;opinion ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>