force-app/main/default/objects/Contact/fields/Fonction_comme_leader_d_opinion__c.field-meta.xml
<CustomField>
    <fullName>Fonction_comme_leader_d_opinion__c</fullName>
    <label>Fonction comme leader d&#39;opinion</label>
    <length>200</length>
    <type>Text</type>
</CustomField>