force-app/main/default/objects/Contact/fields/Formateur__c.field-meta.xml
<CustomField>
    <fullName>Formateur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Formateur</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>