force-app/main/default/objects/Contact/fields/Numero_d_identification__c.field-meta.xml
<CustomField>
    <fullName>Numero_d_identification__c</fullName>
    <label>Numéro d&#39;identification</label>
    <length>40</length>
    <type>Text</type>
</CustomField>