force-app/main/default/objects/Contact/fields/Responsable_facturation__c.field-meta.xml
<CustomField>
    <fullName>Responsable_facturation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Responsable facturation</label>
    <type>Checkbox</type>
</CustomField>