force-app/main/default/objects/Contact/fields/Responsable_magasin__c.field-meta.xml
<CustomField>
    <fullName>Responsable_magasin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Responsable magasin</label>
    <type>Checkbox</type>
</CustomField>