force-app/main/default/objects/Contact/validationRules/CONT_VR02_Prenom_obligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>CONT_VR02_Prenom_obligatoire</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$User.BypassValidationRule__c,
ISBLANK( FirstName ))</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Vous devez obligatoirement renseigner le champ &quot;Prénom&quot;</errorMessage>
</ValidationRule>